// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`permissionsConst snapshot tests allPermissions matches snapshot 1`] = `
[
  "AddonsCreate",
  "AddonsDelete",
  "AddonsUpdate",
  "AddonsView",
  "AiConversationsCreate",
  "AiConversationsView",
  "AnalyticsView",
  "AuditLogsView",
  "AuthenticationMethodsUpdate",
  "AuthenticationMethodsView",
  "BillableMetricsCreate",
  "BillableMetricsDelete",
  "BillableMetricsUpdate",
  "BillableMetricsView",
  "BillingEntitiesCreate",
  "BillingEntitiesDelete",
  "BillingEntitiesUpdate",
  "BillingEntitiesView",
  "ChargesCreate",
  "ChargesDelete",
  "ChargesUpdate",
  "CouponsAttach",
  "CouponsCreate",
  "CouponsDelete",
  "CouponsDetach",
  "CouponsUpdate",
  "CouponsView",
  "CreditNotesCreate",
  "CreditNotesExport",
  "CreditNotesSend",
  "CreditNotesUpdate",
  "CreditNotesView",
  "CreditNotesVoid",
  "CustomersCreate",
  "CustomersDelete",
  "CustomersUpdate",
  "CustomersView",
  "DataApiView",
  "DevelopersKeysManage",
  "DevelopersManage",
  "DunningCampaignsCreate",
  "DunningCampaignsDelete",
  "DunningCampaignsUpdate",
  "DunningCampaignsView",
  "FeaturesCreate",
  "FeaturesDelete",
  "FeaturesUpdate",
  "FeaturesView",
  "InvoiceCustomSectionsCreate",
  "InvoiceCustomSectionsDelete",
  "InvoiceCustomSectionsUpdate",
  "InvoiceCustomSectionsView",
  "InvoicesCreate",
  "InvoicesExport",
  "InvoicesSend",
  "InvoicesUpdate",
  "InvoicesView",
  "InvoicesVoid",
  "OrderFormsSign",
  "OrderFormsView",
  "OrderFormsVoid",
  "OrdersUpdate",
  "OrdersView",
  "OrganizationEmailsUpdate",
  "OrganizationEmailsView",
  "OrganizationIntegrationsCreate",
  "OrganizationIntegrationsDelete",
  "OrganizationIntegrationsUpdate",
  "OrganizationIntegrationsView",
  "OrganizationInvoicesUpdate",
  "OrganizationInvoicesView",
  "OrganizationMembersCreate",
  "OrganizationMembersDelete",
  "OrganizationMembersUpdate",
  "OrganizationMembersView",
  "OrganizationTaxesUpdate",
  "OrganizationTaxesView",
  "OrganizationUpdate",
  "OrganizationView",
  "PaymentMethodsCreate",
  "PaymentMethodsDelete",
  "PaymentMethodsUpdate",
  "PaymentMethodsView",
  "PaymentReceiptsSend",
  "PaymentReceiptsView",
  "PaymentsCreate",
  "PaymentsView",
  "PlansCreate",
  "PlansDelete",
  "PlansUpdate",
  "PlansView",
  "PricingUnitsCreate",
  "PricingUnitsUpdate",
  "PricingUnitsView",
  "QuotesApprove",
  "QuotesClone",
  "QuotesCreate",
  "QuotesUpdate",
  "QuotesView",
  "QuotesVoid",
  "RolesCreate",
  "RolesDelete",
  "RolesUpdate",
  "RolesView",
  "SecurityLogsView",
  "SubscriptionsCreate",
  "SubscriptionsUpdate",
  "SubscriptionsView",
  "WalletsCreate",
  "WalletsTerminate",
  "WalletsTopUp",
  "WalletsUpdate",
]
`;

exports[`permissionsConst snapshot tests groupNameMapping structure matches snapshot 1`] = `
{
  "addons": "text_629728388c4d2300e2d3801a",
  "aiAgent": "text_1767000875575g9rl1iida4n",
  "analytics": "text_6553885df387fd0097fd7384",
  "auditLogs": "text_1766071560701xrf1tn0w5wx",
  "authenticationMethods": "text_664c732c264d7eed1c74fd96",
  "billableMetrics": "text_623b497ad05b960101be3438",
  "billingEntities": "text_1743077296189ms0shds6g53",
  "charges": "text_1768572142436xubwd6sei3b",
  "coupons": "text_637ccf8133d2c9a7d11ce705",
  "creditNotes": "text_637ccf8133d2c9a7d11ce708",
  "customerSettings": "text_1765882497985wd35gnobdvl",
  "customers": "text_624efab67eb2570101d117a5",
  "dataApi": "text_1766071560701ud8peghugtg",
  "developers": "text_6271200984178801ba8bdeac",
  "draftInvoices": "text_17658824979850l2uroad1dz",
  "dunningCampaigns": "text_1728574726495w5aylnynne9",
  "features": "text_1752692673070k7z0mmf0494",
  "invoiceCustomSections": "text_1765882631575jrjzdfbdvn5",
  "invoices": "text_63ac86d797f728a87b2f9f85",
  "organization": "text_173289482048511y9ieyywq5",
  "payments": "text_6672ebb8b1b50be550eccbed",
  "plans": "text_62442e40cea25600b0b6d85a",
  "pricingUnits": "text_17502505476284yyq70yy6mx",
  "quotes": "text_1776154937966msav6jde4hm",
  "roles": "text_1765448879791epmkg4xijkn",
  "securityLogs": "text_17730476805600nudrokzkk5",
  "subscriptions": "text_6250304370f0f700a8fdc28d",
  "wallets": "text_62d175066d2dbf1d50bc937c",
}
`;

exports[`permissionsConst snapshot tests permissionGroupMapping structure matches snapshot 1`] = `
{
  "addons": [
    "AddonsCreate",
    "AddonsDelete",
    "AddonsUpdate",
    "AddonsView",
  ],
  "aiAgent": [
    "AiConversationsCreate",
    "AiConversationsView",
  ],
  "analytics": [
    "AnalyticsView",
  ],
  "auditLogs": [
    "AuditLogsView",
  ],
  "authenticationMethods": [
    "AuthenticationMethodsView",
    "AuthenticationMethodsUpdate",
  ],
  "billableMetrics": [
    "BillableMetricsCreate",
    "BillableMetricsDelete",
    "BillableMetricsUpdate",
    "BillableMetricsView",
  ],
  "billingEntities": [
    "BillingEntitiesView",
    "BillingEntitiesCreate",
    "BillingEntitiesUpdate",
    "BillingEntitiesDelete",
  ],
  "charges": [
    "ChargesCreate",
    "ChargesUpdate",
    "ChargesDelete",
  ],
  "coupons": [
    "CouponsAttach",
    "CouponsCreate",
    "CouponsDelete",
    "CouponsDetach",
    "CouponsUpdate",
    "CouponsView",
  ],
  "creditNotes": [
    "CreditNotesCreate",
    "CreditNotesView",
    "CreditNotesVoid",
    "CreditNotesUpdate",
    "CreditNotesExport",
    "CreditNotesSend",
  ],
  "customers": [
    "CustomersCreate",
    "CustomersDelete",
    "CustomersUpdate",
    "CustomersView",
  ],
  "dataApi": [
    "DataApiView",
  ],
  "developers": [
    "DevelopersKeysManage",
    "DevelopersManage",
  ],
  "dunningCampaigns": [
    "DunningCampaignsCreate",
    "DunningCampaignsUpdate",
    "DunningCampaignsView",
    "DunningCampaignsDelete",
  ],
  "features": [
    "FeaturesCreate",
    "FeaturesDelete",
    "FeaturesUpdate",
    "FeaturesView",
  ],
  "invoiceCustomSections": [
    "InvoiceCustomSectionsCreate",
    "InvoiceCustomSectionsUpdate",
    "InvoiceCustomSectionsDelete",
    "InvoiceCustomSectionsView",
  ],
  "invoices": [
    "InvoicesCreate",
    "InvoicesSend",
    "InvoicesUpdate",
    "InvoicesView",
    "InvoicesVoid",
    "InvoicesExport",
  ],
  "organization": [
    "OrganizationView",
    "OrganizationUpdate",
    "OrganizationEmailsView",
    "OrganizationEmailsUpdate",
    "OrganizationIntegrationsCreate",
    "OrganizationIntegrationsDelete",
    "OrganizationIntegrationsUpdate",
    "OrganizationIntegrationsView",
    "OrganizationInvoicesView",
    "OrganizationInvoicesUpdate",
    "OrganizationMembersCreate",
    "OrganizationMembersDelete",
    "OrganizationMembersUpdate",
    "OrganizationMembersView",
    "OrganizationTaxesView",
    "OrganizationTaxesUpdate",
  ],
  "payments": [
    "PaymentsCreate",
    "PaymentsView",
    "PaymentMethodsCreate",
    "PaymentMethodsDelete",
    "PaymentMethodsUpdate",
    "PaymentMethodsView",
    "PaymentReceiptsView",
    "PaymentReceiptsSend",
  ],
  "plans": [
    "PlansCreate",
    "PlansDelete",
    "PlansUpdate",
    "PlansView",
  ],
  "pricingUnits": [
    "PricingUnitsCreate",
    "PricingUnitsUpdate",
    "PricingUnitsView",
  ],
  "quotes": [
    "QuotesApprove",
    "QuotesClone",
    "QuotesCreate",
    "QuotesUpdate",
    "QuotesView",
    "QuotesVoid",
    "OrderFormsView",
    "OrderFormsSign",
    "OrderFormsVoid",
    "OrdersUpdate",
    "OrdersView",
  ],
  "roles": [
    "RolesCreate",
    "RolesDelete",
    "RolesUpdate",
    "RolesView",
  ],
  "securityLogs": [
    "SecurityLogsView",
  ],
  "subscriptions": [
    "SubscriptionsCreate",
    "SubscriptionsUpdate",
    "SubscriptionsView",
  ],
  "wallets": [
    "WalletsCreate",
    "WalletsTerminate",
    "WalletsTopUp",
    "WalletsUpdate",
  ],
}
`;
